fix: select input position on small screens

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -213,6 +213,7 @@ dialog#modalSettings {
 	input,
 	select {
 		text-align: right;
+		margin-left: auto;
 		line-height: 0;
 	}
 }
